--- a/app/assets/styles/_type.scss
+++ b/app/assets/styles/_type.scss
@@ -43,6 +43,27 @@ a.link--deco {
   &:hover {
     opacity: 1;
     background-size: 100% 100%;
+    color: $base-color;
+  }
+}
+
+a.link--deco:visited, a.link--deco:active, a.link--deco:link {
+  color: $base-color;
+}
+
+a.link--primary {
+  text-decoration: none;
+  display: inline;
+  background-image: linear-gradient(180deg, transparent 65%, rgba($base-color, 0.22) 0px);
+  background-repeat: no-repeat;
+  background-size: 100% 30%;
+  background-position: bottom left;
+  transition: background-size 0.4s ease 0s;
+  position: relative;
+  line-height: 0.875rem;
+  transition: all 0.3s;
+  &:hover {
+    color: darken($base-color, 10%);
   }
 }
 
