Add publish radio buttons, restyle

--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -141,7 +141,7 @@ label {
   margin-bottom: .3em;
 }
 
-.checkbox input {
+.radio input {
   margin-bottom: 0;
   display: inline-block;
   margin-right: 1em;
