--- a/app/assets/styles/_tables.scss
+++ b/app/assets/styles/_tables.scss
@@ -23,6 +23,12 @@
     padding-right: 1rem;
   }
 
+  tbody {
+    td {
+      font-size: .9em;
+    }
+  }
+
   tbody tr:first-of-type {
     td {
       border-top: 0;
