--- a/app/assets/styles/_buttons.scss
+++ b/app/assets/styles/_buttons.scss
@@ -18,6 +18,7 @@
   border-radius: $base-border-radius;
   font-weight: $base-font-bold;
   cursor: pointer;
+  font-weight: normal;
 
   /* States */
 
