Indicator type is a checkbox

--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -368,3 +368,14 @@ label {
     margin-bottom: .5em;
   }
 }
+
+.indicator-checkbox {
+  input[type="checkbox"] {
+    margin: 1em;
+    display: inline;
+  }
+
+  .field-boolean {
+    margin-bottom: 0;
+  }
+}
