--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -190,20 +190,30 @@ label {
 }
 
 .multiform-group_item {
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
   input {
     margin-bottom: 1em;
   }
 }
 
+.label-lower {
+  margin-top: 1.3em;
+}
+
 .form-block {
   .form-group {
-    margin-bottom: 1em;
+    margin-bottom: 1.8em;
     input, textarea, select {
       margin-bottom: 1em;
     }
     &:last-of-type {
       margin-bottom: 0em;
+    }
+  }
+  .with-ar {
+    margin-bottom: .8em;
+    input {
+      margin-bottom: .8em;
     }
   }
   .array-item {
