fixed very small styling and text issue

--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -416,3 +416,7 @@ label {
 .has-error .form-control-feedback {
   color: #333;
 }
+
+.checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"], .radio input[type="radio"], .radio-inline input[type="radio"] {
+  min-width: 10px;
+}
