--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -417,6 +417,12 @@ label {
   color: #333;
 }
 
+.error-list {
+  padding: 10px;
+  margin-bottom: 25px;
+  background-color: rgba(169, 68, 66, 0.1);
+}
+
 .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"], .radio input[type="radio"], .radio-inline input[type="radio"] {
   min-width: 10px;
 }
